--- a/App.config
+++ b/App.config
@@ -1,6 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+  </configSections>
+  <appSettings>
+    <add key="LogPath" value="C:\Temp\SmSpVimeo\Vimeo\dontDelete3.txt"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+  </appSettings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+  <connectionStrings>
+    <!--"DevConnection": "Data Source=204.27.61.178;Database=Pubs;User ID=sa;Password=915rzg6805;MultipleActiveResultSets=true"-->
+    <!--<add name="vimeocs" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=sitebooster before jun 27 22;User ID=sa;Password=sa"/>-->
+    <add name="vimeocs" connectionString="Data Source=204.27.61.178;Database=Pubs;User ID=sa;Password=915rzg6805;MultipleActiveResultSets=true"/>
+    <add name="pubsEntities" connectionString="metadata=res://*/PubsModel.csdl|res://*/PubsModel.ssdl|res://*/PubsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=204.27.61.178;initial catalog=pubs;persist security info=True;user id=sa;password=915rzg6805;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="pubsEntities1" connectionString="metadata=res://*/pubsModel.csdl|res://*/pubsModel.ssdl|res://*/pubsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=204.27.61.178;initial catalog=pubs;user id=sa;password=915rzg6805;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="pubsEntities2" connectionString="metadata=res://*/pubsmodel.csdl|res://*/pubsmodel.ssdl|res://*/pubsmodel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=204.27.61.178;initial catalog=pubs;persist security info=True;user id=sa;password=915rzg6805;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+  </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
